--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,10 +1,10 @@
 .app {
-    margin: 0 auto;
+    width: 100vh;
     height: 100%;
-    width: 785px;
+    margin: 0 auto;
     padding: 10px;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: $white;
     border-radius: 10px;
 }
