--- a/src/components/calendar-header/calendar-header.module.scss
+++ b/src/components/calendar-header/calendar-header.module.scss
@@ -12,58 +12,55 @@
         gap: 10px;
 
         select {
-            background-color: white;
-            border: 1px solid #E8E8E8;
-            border-radius: 6px;
             padding: 5px 10px;
+            border: 1px solid $light-gray;
+            border-radius: 4px;
+            background-color: $white;
             font-size: 16px;
             font-weight: 500;
-            color: #595959;
+            color: $dark-gray;
             cursor: pointer;
-            min-width: 80px;
-            text-align: center;
 
             &:focus {
                 outline: none;
-                border-color: #007bff;
+                border-color: $blue;
             }
 
             option {
-                background-color: white;
-                color: #595959;
+                background-color: $white;
+                color: $dark-gray;
             }
         }
     }
 
-
-
     .modeWrapper {
         display: flex;
+        align-items: center;
         overflow: hidden;
         border: none;
-        align-items: center;
+        
 
         button {
             padding: 5px 15px;
+            border: 1px solid $light-gray;
+            background-color: $white;
             cursor: pointer;
-            border: 1px solid #E8E8E8;
-            background-color: white;
         }
 
         .buttonLeft {
-            border-top-left-radius: 6px;
-            border-bottom-left-radius: 6px;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
         }
 
         .buttonRight {
-            border-top-right-radius: 6px;
-            border-bottom-right-radius: 6px;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
         }
 
         .active {
-            color: #007bff;
-            border: 2px solid #007bff;
-            background: white;
+            color: $blue;
+            border: 2px solid $blue;
+            background: $white;
         }
     }
 }
