--- a/src/components/day-details/day-details.module.scss
+++ b/src/components/day-details/day-details.module.scss
@@ -8,16 +8,16 @@
 
     .addButton {
         padding: 10px 20px;
-        align-self: flex-start;
         display: flex;
-        background-color: #009EFF;
+        align-self: flex-start;
+        background-color: $blue;
         border: none;
-        border-radius: 5px;
+        border-radius: 4px;
         gap: 10px;
 
         p {
             margin: 0;
-            color: white;
+            color: $white;
         }
     }
 
@@ -26,7 +26,7 @@
         padding: 0;
         display: flex;
         flex-direction: column;
-        gap: 15px;
         align-items: center;
+        gap: 15px;  
     }
 }
