--- a/src/components/event-item/event-item.module.scss
+++ b/src/components/event-item/event-item.module.scss
@@ -6,7 +6,6 @@
     justify-content: space-between;
     align-items: center;
 
-
     .eventInfo {
         display: flex;
         flex-direction: column;
@@ -17,10 +16,10 @@
         }
 
         .dscription {
-            color: #595959;
+            color: $dark-gray;
         }
         .period {
-            color: #929292;
+            color: $gray;
         }
     }
 
@@ -37,7 +36,7 @@
             padding: 0;
             border: none;
             background-color: transparent;
-            color: #0090FF;
+            color: $blue;
             cursor: pointer;
         }
     }
